# Ataboy

./: .gitignore  .travis.yml  Ataboy.sln  Ataboy.vcxproj  Ataboy.vcxproj.filters  CMakeLists.txt  FileIo.cpp  FileIo.h  GB.cpp  GB.h  GB_Audio.h  GB_Audio_impl.hpp  GB_CPU.h  GB_CPU_impl.hpp  GB_GamePak.h  GB_GamePak_impl.hpp  GB_IO.h  GB_IO_impl.hpp  GB_System.h  GB_System_impl.hpp  GB_Types.h  GB_Video.h  GB_Video_impl.hpp  GB_impl.hpp  ImageIo.cpp  ImageIo.h  LICENSE  Main.cpp  ProgramOptions.cpp  ProgramOptions.h  README.md  _clang-format  at_scope_exit.h
cmake/: FindSDL2.cmake
